apps/argocd/argocd-ingress.yaml
# Install ArgoCD first:
# kubectl create namespace argocd
# kubectl apply -n argocd --server-side --force-conflicts \
#   -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  tls:
    - hosts:
        - argocd.bradmedia.net
      secretName: bradmedia-wildcard-tls
  rules:
    - host: argocd.bradmedia.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
